--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	],
 	"homepage": "https://it.rocks",
 	"keywords": [
+		"backend",
 		"class",
 		"it.rocks",
 		"property",
@@ -57,5 +58,5 @@
 		"start:demo:esm": "node demo/esm/index"
 	},
 	"types": "./esm/reflect.d.ts",
-	"version": "0.0.5"
+	"version": "0.0.6"
 }
