--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
 		"module": "ES2022",
 		"moduleResolution": "node",
 		"skipLibCheck": true,
+		"sourceMap": true,
 		"strict": true,
 		"target": "ES2022"
 	},
