--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"dependencies": {
 		"@itrocks/class-file": "latest",
 		"@itrocks/class-type": "latest",
+		"@itrocks/property-default": "latest",
 		"@itrocks/property-type": "latest",
 		"@itrocks/sorted-array": "latest",
 		"reflect-metadata": "^0.2"
@@ -58,5 +59,5 @@
 		"start:demo:esm": "node demo/esm/index"
 	},
 	"types": "./esm/reflect.d.ts",
-	"version": "0.0.15"
+	"version": "0.0.16"
 }
